force-app/main/default/objects/ReferentielOptions__c/ReferentielOptions__c.object-meta.xml
<CustomObject>
    <label>Référenciel Options</label>
    <nameField>
        <label>Nom de Référentiel Options</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Référenciel Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>