force-app/main/default/objects/ReferentielOptions__c/fields/CodeOption__c.field-meta.xml
<CustomField>
    <fullName>CodeOption__c</fullName>
    <externalId>true</externalId>
    <label>Code Option</label>
    <length>10</length>
    <type>Text</type>
</CustomField>