force-app/main/default/objects/ReferentielOptions__c/fields/CodeOptionParent__c.field-meta.xml
<CustomField>
    <fullName>CodeOptionParent__c</fullName>
    <label>Code Option Parent</label>
    <length>10</length>
    <type>Text</type>
</CustomField>