force-app/main/default/objects/ReferentielOptions__c/fields/Debutvalidite__c.field-meta.xml
<CustomField>
    <fullName>Debutvalidite__c</fullName>
    <description>Renommer &quot;Date Validité&quot;
Date de début de validité de l&apos;option
GC_options.valide = 0</description>
    <label>Début validité</label>
    <type>Date</type>
</CustomField>