force-app/main/default/objects/ReferentielOptions__c/fields/FichierImage__c.field-meta.xml
<CustomField>
    <fullName>FichierImage__c</fullName>
    <label>Fichier Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>