force-app/main/default/objects/ReferentielOptions__c/fields/FinValidite__c.field-meta.xml
<CustomField>
    <fullName>FinValidite__c</fullName>
    <label>Fin Validité</label>
    <type>Date</type>
</CustomField>