force-app/main/default/objects/ReferentielOptions__c/fields/LibelleModifiable__c.field-meta.xml
<CustomField>
    <fullName>LibelleModifiable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Libellé Modifiable</label>
    <type>Checkbox</type>
</CustomField>