force-app/main/default/objects/ReferentielOptions__c/fields/LibelleOption__c.field-meta.xml
<CustomField>
    <fullName>LibelleOption__c</fullName>
    <label>Libellé Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>