force-app/main/default/objects/ReferentielOptions__c/fields/OptionPromotionnelle__c.field-meta.xml
<CustomField>
    <fullName>OptionPromotionnelle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Option Promotionnelle</label>
    <type>Checkbox</type>
</CustomField>