force-app/main/default/objects/ReferentielOptions__c/fields/PerimetrePromotion__c.field-meta.xml
<CustomField>
    <fullName>PerimetrePromotion__c</fullName>
    <label>Périmètre Promotion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>