force-app/main/default/objects/ReferentielOptions__c/fields/PrixReferencePromotion__c.field-meta.xml
<CustomField>
    <fullName>PrixReferencePromotion__c</fullName>
    <label>Prix Référence Promotion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>