force-app/main/default/objects/ReferentielOptions__c/fields/Quantitemodifiable__c.field-meta.xml
<CustomField>
    <fullName>Quantitemodifiable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quantité modifiable</label>
    <type>Checkbox</type>
</CustomField>