force-app/main/default/objects/ReferentielOptions__c/fields/Typedeloption__c.field-meta.xml
<CustomField>
    <fullName>Typedeloption__c</fullName>
    <label>Type de l&apos;option</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>