force-app/main/default/objects/ReferentielOptions__c/fields/TypePromotion__c.field-meta.xml
<CustomField>
    <fullName>TypePromotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Type Promotion</label>
    <referenceTo>TypePromotion__c</referenceTo>
    <relationshipName>R_f_rentiels_Options</relationshipName>
    <type>Lookup</type>
</CustomField>