force-app/main/default/objects/ReferentielOptions__c/fields/uniqueKey__c.field-meta.xml
<CustomField>
    <fullName>uniqueKey__c</fullName>
    <externalId>true</externalId>
    <label>uniqueKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>