force-app/main/default/objects/ReferentielOptions__c/fields/UnitedevalorisationPromotion__c.field-meta.xml
<CustomField>
    <fullName>UnitedevalorisationPromotion__c</fullName>
    <label>Unité de valorisation Promotion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>