force-app/main/default/objects/ReferentielOptions__c/fields/Valorisationmodifiable__c.field-meta.xml
<CustomField>
    <fullName>Valorisationmodifiable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valorisation modifiable</label>
    <type>Checkbox</type>
</CustomField>