force-app/main/default/objects/ReferentielOptions__c/recordTypes/FRAReferentielOptionssdt.recordType-meta.xml
<RecordType>
    <fullName>FRAReferentielOptionssdt</fullName>
    <active>true</active>
    <description>Le type d&apos;enregistrement std pour le Référentiel Option</description>
    <label>FRA- Référentiel Options -sdt</label>
</RecordType>