force-app/main/default/objects/ReferentielOptions__c/listViews/DCA_OptionSearch.listView-meta.xml
<ListView>
    <fullName>DCA_OptionSearch</fullName>
    <columns>NAME</columns>
    <columns>LibelleOption__c</columns>
    <columns>Debutvalidite__c</columns>
    <columns>FinValidite__c</columns>
    <columns>Typedeloption__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Actif__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>OP0224</value>
    </filters>
    <label>DCA_OptionSearch</label>
</ListView>