force-app/main/default/objects/ReferentielOptions__c/listViews/DCA_OptionSearch2.listView-meta.xml
<ListView>
    <fullName>DCA_OptionSearch2</fullName>
    <columns>NAME</columns>
    <columns>Actif__c</columns>
    <columns>CodeOption__c</columns>
    <columns>LibelleOption__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CodeOption__c</field>
        <operation>contains</operation>
        <value>ALLIA</value>
    </filters>
    <label>DCA_OptionSearch2</label>
</ListView>