force-app/main/default/objects/ReferentielOptions__c/listViews/DEPLOIEMENT_DU_04112016.listView-meta.xml
<ListView>
    <fullName>DEPLOIEMENT_DU_04112016</fullName>
    <columns>NAME</columns>
    <columns>LibelleOption__c</columns>
    <columns>Debutvalidite__c</columns>
    <columns>FinValidite__c</columns>
    <columns>Valorisationmodifiable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>11/4/2016 12:00 AM</value>
    </filters>
    <label>DEPLOIEMENT DU 04/11/2016</label>
    <language>fr</language>
</ListView>