force-app/main/default/objects/ReferentielOptions__c/listViews/DEPLOIEMENT_DU_17122015.listView-meta.xml
<ListView>
    <fullName>DEPLOIEMENT_DU_17122015</fullName>
    <columns>NAME</columns>
    <columns>LibelleOption__c</columns>
    <columns>Debutvalidite__c</columns>
    <columns>FinValidite__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>12/17/2015 12:00 AM</value>
    </filters>
    <label>DEPLOIEMENT DU 17-12-2015</label>
    <language>fr</language>
</ListView>