force-app/main/default/objects/ReferentielOptions__c/listViews/EXPFIN2012PEALU.listView-meta.xml
<ListView>
    <fullName>EXPFIN2012PEALU</fullName>
    <columns>NAME</columns>
    <columns>LibelleOption__c</columns>
    <columns>Debutvalidite__c</columns>
    <columns>FinValidite__c</columns>
    <columns>Typedeloption__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FinValidite__c</field>
        <operation>equals</operation>
        <value>12/31/2012</value>
    </filters>
    <filters>
        <field>CodeOption__c</field>
        <operation>contains</operation>
        <value>PEALU</value>
    </filters>
    <label>EXPIRE FIN 2012 - PEALU</label>
    <language>fr</language>
</ListView>