force-app/main/default/objects/ReferentielOptions__c/listViews/JPO_SECOND_SEMESTRE_2016_PROMO_FLASH.listView-meta.xml
<ListView>
    <fullName>JPO_SECOND_SEMESTRE_2016_PROMO_FLASH</fullName>
    <columns>NAME</columns>
    <columns>LibelleOption__c</columns>
    <columns>CodeOption__c</columns>
    <columns>Debutvalidite__c</columns>
    <columns>FinValidite__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CodeOption__c</field>
        <operation>contains</operation>
        <value>OP0616NAT</value>
    </filters>
    <label>JPO SECOND SEMESTRE 2016 + PROMO FLASH</label>
    <language>fr</language>
</ListView>